Add flow-toolbox CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,6 @@ notifications:
 
 script:
   - cd flow-types
+  - npx flow --show-all-errors
   - npx flow --show-all-errors --json
+  - npx flow-toolbox typecheck
