--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,4 +16,6 @@ build:
   script:
     - yarn
     - cd flow-types
+    - npx flow --show-all-errors
     - npx flow --show-all-errors --json
+    - npx flow-toolbox typecheck
