Disable json in flow

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,5 @@ build:
   script:
     - yarn
     - cd flow-types
-    - npx flow --show-all-errors --json
+    - npx flow --show-all-errors
     - npx flow-toolbox typecheck
