--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,9 @@ build:
   artifacts:
     paths:
       - flow-types/typecheck
+      - flow-types/flow-errors.txt
   script:
     - yarn
     - cd flow-types
-    - npx flow --show-all-errors
+    - npx flow --show-all-errors > ./flow-errors.txt
     - npx flow-toolbox typecheck
